WEB-2: Added event notification api
